Добавлены боковые панели, плавно скрывающиеся по нажатию кнопки около них.

--- a/src/styles/default.scss
+++ b/src/styles/default.scss
@@ -12,3 +12,4 @@
 @import "project/values/values-list";
 @import "project/values/values-list-item";
 @import "project/control_panel/control_panel";
+@import "project/side_panel/side_panel";
